--- a/Css/main.css
+++ b/Css/main.css
@@ -119,3 +119,51 @@ header {
 }
 
 /* Header end */
+
+/* Bimg start */
+section#bimg{
+    background-image: url(../images/header-background.jpg);
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    div.centertext{
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        align-items: center;
+
+        h1{
+            font-size: 40px;
+            font-weight: 700;
+            font-family: "Montserrat", sans-serif;
+            margin: 0px;
+        }
+        p{
+            font-size: 18px;
+            font-family:"Open Sans", sans-serif;
+            font-weight: 400;
+            margin: 0px;
+        }
+        a{
+            color: white;
+            font-size: 12px;
+            padding: 16px 24px;
+            margin: 0px 8px 20px 0px;   
+            font-weight: 700;
+            text-decoration: none;
+            background-color: #14BF98;
+            border-radius: 4px;
+            font-family: "Montserrat", sans-serif;
+        }
+    }
+}
+/* Bimg end */
