--- a/Css/main.css
+++ b/Css/main.css
@@ -1,169 +1,210 @@
 body {
-    margin: 0px;
+  margin: 0px;
 }
 
 .container {
-    width: 100%;
-    margin: auto;
+  width: 100%;
+  margin: auto;
 }
 
 @media (min-width: 576px) {
-    .container {
-        width: 540px;
-    }
+  .container {
+    width: 540px;
+  }
 }
 
 @media (min-width: 768px) {
-    .container {
-        width: 720px;
-    }
+  .container {
+    width: 720px;
+  }
 }
 
 @media (min-width: 992px) {
-    .container {
-        width: 960px;
-    }
+  .container {
+    width: 960px;
+  }
 }
 
 @media (min-width: 1200px) {
-    .container {
-        width: 1140px;
-    }
+  .container {
+    width: 1140px;
+  }
 }
 
 @media (min-width: 1400px) {
-    .container {
-        width: 1320px;
-    }
+  .container {
+    width: 1320px;
+  }
 }
 
 /* Header start */
 header {
-    background-color: #113448;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 700;
+  background-color: #113448;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
 
-    nav {
-        padding: 8px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+  nav {
+    padding: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-        a img {
-            width: 7.0625rem;
-            height: 32px;
-        }
-
-        a {
-            text-decoration: none;
-            color: white;
-            padding: 4px 12px;
-            font-size: 14px;
-        }
-
-        div.navright {
-            display: flex;
-            align-items: center;
-
-            a {
-                display: inline-block;
-            }
-
-            a:hover {
-                color: #14bf98;
-            }
-        }
-
-        span.svg {
-            font: 14px;
-            padding: 0px 0px 0px 0px;
-        }
-
-        div.sosialicons {
-            display: flex;
-            gap: 8px;
-
-            a.hex_link {
-                display: inline-block;
-                width: 26px;
-                height: 26px;
-                position: relative;
-                padding: 0px;
-
-                span.hexagon {
-                    display: inline-block;
-                    background-image: url(../images/hexagon-green.svg);
-                    background-repeat: no-repeat;
-                    background-size: 100% 100%;
-                    width: 100%;
-                    height: 100%;
-                    position: absolute;
-                }
-
-                i {
-                    font-size: 16px;
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    translate: -50% -50%;
-                }
-            }
-
-            a.hex_link:hover {
-                span.hexagon {
-                    background-image: url(../images/hexagon-white.svg);
-                }
-            }
-        }
+    a img {
+      width: 7.0625rem;
+      height: 32px;
     }
+
+    a {
+      text-decoration: none;
+      color: white;
+      padding: 4px 12px;
+      font-size: 14px;
+    }
+
+    div.navright {
+      display: flex;
+      align-items: center;
+
+      a {
+        display: inline-block;
+      }
+
+      a:hover {
+        color: #14bf98;
+      }
+    }
+
+    span.svg {
+      font: 14px;
+      padding: 0px 0px 0px 0px;
+    }
+
+    div.sosialicons {
+      display: flex;
+      gap: 8px;
+
+      a.hex_link {
+        display: inline-block;
+        width: 26px;
+        height: 26px;
+        position: relative;
+        padding: 0px;
+
+        span.hexagon {
+          display: inline-block;
+          background-image: url(../images/hexagon-green.svg);
+          background-repeat: no-repeat;
+          background-size: 100% 100%;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+        }
+
+        i {
+          font-size: 16px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          translate: -50% -50%;
+        }
+      }
+
+      a.hex_link:hover {
+        span.hexagon {
+          background-image: url(../images/hexagon-white.svg);
+        }
+      }
+    }
+  }
 }
 
 /* Header end */
 
 /* Bimg start */
-section#bimg{
-    background-image: url(../images/header-background.jpg);
-    width: 100%;
-    height: 600px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+section#bimg {
+  background-image: url(../images/header-background.jpg);
+  width: 100%;
+  height: 600px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 
-    div.centertext{
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        translate: -50% -50%;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-        align-items: center;
+  div.centertext {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
 
-        h1{
-            font-size: 40px;
-            font-weight: 700;
-            font-family: "Montserrat", sans-serif;
-            margin: 0px;
-        }
-        p{
-            font-size: 18px;
-            font-family:"Open Sans", sans-serif;
-            font-weight: 400;
-            margin: 0px;
-        }
-        a{
-            color: white;
-            font-size: 12px;
-            padding: 16px 24px;
-            margin: 0px 8px 20px 0px;   
-            font-weight: 700;
-            text-decoration: none;
-            background-color: #14BF98;
-            border-radius: 4px;
-            font-family: "Montserrat", sans-serif;
-        }
+    h1 {
+      font-size: 40px;
+      font-weight: 700;
+      font-family: 'Montserrat', sans-serif;
+      margin: 0px;
     }
+    p {
+      font-size: 18px;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+      margin: 0px;
+    }
+    a {
+      color: white;
+      font-size: 12px;
+      padding: 16px 24px;
+      margin: 0px 8px 20px 0px;
+      font-weight: 700;
+      text-decoration: none;
+      background-color: #14bf98;
+      border-radius: 4px;
+      font-family: 'Montserrat', sans-serif;
+    }
+  }
 }
 /* Bimg end */
+
+/* Intro start */
+section#intro {
+  padding: 128px 0px;
+  display: flex;
+  gap: 16px;
+
+  div.left {
+    flex: 2;
+    h4 {
+      font-size: 13px;
+      color: #14bf98;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 400;
+    }
+    h2 {
+      font-size: 28px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+    }
+    p {
+      font-size: 16px;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+      color: gray;
+    }
+    h3 {
+      font-size: 16px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+    }
+  }
+  div.right {
+    flex: 3;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+/* Intro end */
