--- a/Css/main.css
+++ b/Css/main.css
@@ -229,6 +229,9 @@ section#cards {
 
   div.card {
     div.Hexagon {
+      width: 96px;
+      height: 96px;
+      position: relative;
       img {
         width: 96px;
         height: 96px;
@@ -238,6 +241,7 @@ section#cards {
         font-size: 35px;
         top: 50%;
         left: 50%;
+        translate: -50% -50%;
         position: absolute;
       }
     }
