--- a/Css/main.css
+++ b/Css/main.css
@@ -68,10 +68,6 @@ header {
       a {
         display: inline-block;
       }
-
-      a:hover {
-        color: #14bf98;
-      }
     }
 
     span.svg {
@@ -166,6 +162,10 @@ section#bimg {
       border-radius: 4px;
       font-family: 'Montserrat', sans-serif;
     }
+
+    a:hover {
+      border: 0.125rem solid #14bf98;
+    }
   }
 }
 
@@ -214,6 +214,7 @@ section#intro {
       width: 100%;
       width: 610px;
       height: 410px;
+      border-radius: 8px;
     }
   }
 }
@@ -232,6 +233,7 @@ section#cards {
       width: 96px;
       height: 96px;
       position: relative;
+
       img {
         width: 96px;
         height: 96px;
@@ -249,14 +251,105 @@ section#cards {
     h4 {
       font-weight: 700;
       font-size: 20px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
     }
 
     p {
       font-weight: 400;
       font-size: 16px;
       color: gray;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
     }
   }
 }
 
 /* Cards end */
+
+/* Services start */
+section#services {
+  padding: 128px 0px;
+
+  div.text {
+    text-align: center;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+
+    h4 {
+      font-size: 13px;
+      font-weight: 400;
+      color: #14bf98;
+    }
+
+    h2.margin {
+      font-size: 28px;
+      margin: 0px;
+    }
+
+
+    h2 {
+      font-size: 28px;
+    }
+  }
+
+  div.price {
+    display: flex;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+
+    div.pricecard {
+      div.up {
+        img {
+          width: 334px;
+          height: 192px;
+          border-top-left-radius: 8px;
+          border-top-right-radius: 8px;
+        }
+      }
+
+      div.down {
+        h3 {
+          font-size: 22px;
+          font-weight: 700;
+        }
+
+        p {
+          font-family: 'Open Sans', sans-serif;
+          color: gray;
+        }
+
+        i {
+          color: #14bf98;
+          font-size: 15px;
+        }
+        p.price{
+          font-size: 16px;
+          font-weight: 700;
+          padding: 0px 0px 4px;
+          span.num{
+            color: #14bf98;
+          }
+        }
+
+        div.link {
+          a {
+            text-decoration: none;
+            color: white;
+            border-radius: 8px;
+            background-color: #14bf98;
+            padding: 16px 16px;
+            font-size: 12px;
+            font-weight: 700;
+          }
+
+          a:hover {
+            border: 0.125rem solid #14bf98;
+          }
+        }
+      }
+    }
+  }
+}
+
+/* Services end */
