--- a/Css/main.css
+++ b/Css/main.css
@@ -323,11 +323,13 @@ section#services {
           color: #14bf98;
           font-size: 15px;
         }
-        p.price{
+
+        p.price {
           font-size: 16px;
           font-weight: 700;
           padding: 0px 0px 4px;
-          span.num{
+
+          span.num {
             color: #14bf98;
           }
         }
@@ -353,3 +355,52 @@ section#services {
 }
 
 /* Services end */
+
+/* Testimonials start */
+section#testimonial {
+  div.testtext {
+    text-align: center; 
+    margin-bottom: 32px;
+    h2 {
+      font-size: 28px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+    }
+
+    p {
+      font-size: 16px;
+      color: gray;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+    }
+
+  }
+
+  div.cards {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+    div.card {
+      text-align: center;
+      img {
+        border-radius: 50%;
+        width: 96px;
+        height: 96px;
+      }
+
+      p {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 400;
+        font-size: 16px;
+      }
+
+      h4 {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+/* Testimonials end */
