--- a/Css/main.css
+++ b/Css/main.css
@@ -359,9 +359,11 @@ section#services {
 /* Testimonials start */
 section#testimonial {
   padding: 64px 0px;
+
   div.testtext {
-    text-align: center; 
+    text-align: center;
     margin-bottom: 32px;
+
     h2 {
       font-size: 28px;
       font-family: 'Montserrat', sans-serif;
@@ -381,8 +383,10 @@ section#testimonial {
     display: flex;
     gap: 16px;
     justify-content: center;
+
     div.card {
       text-align: center;
+
       img {
         border-radius: 50%;
         width: 96px;
@@ -405,3 +409,76 @@ section#testimonial {
 }
 
 /* Testimonials end */
+
+/* Call Me start */
+section#callme {
+  padding: 64px 0px;
+  background-color: #153e52;
+
+  div.flex {
+    display: flex;
+    gap: 32px;
+    font-family: 'Montserrat', sans-serif;
+    div.left {
+      color: white;
+      h4 {
+        color: #14bf98;
+        font-size: 13px;
+        font-weight: 400;
+      }
+
+      h2 {
+        font-size: 28px;
+        font-weight: 700;
+      }
+
+      p {
+         font-size: 16px;
+        font-weight: 400;
+        font-family: 'Open Sans', sans-serif;
+      }
+      i{
+        font-size: 10px;
+        color: #14bf98;
+      }
+    }
+
+    div.right {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      input {
+        padding: 16px;
+        border-radius: 8px;
+        background-color: #2a5d77;
+        border: 1px solid #39728f;
+        font-family: 'Open Sans', sans-serif;
+      }
+      input::placeholder{
+        color: white;
+      }
+      p {   
+        font-family: 'Open Sans', sans-serif;
+        color: white;
+        a{
+          text-decoration: underline;
+          color: white;
+        }
+      }
+
+      a.call {
+        display: inline-block;
+        color: white;
+        text-decoration: none;
+        padding: 16px 8px;
+        background-color: #14bf98;
+        border-radius: 8px;
+        text-align: center;
+        font-weight: 700;
+      }
+    }
+  }
+}
+
+/* Call Me end */
